Added ui url link handling